# phem

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
examples/assembled_examples/: README.md  example_compute_diversity.py  run_evaluate_ensemble_on_metatask.py
examples/custom_data_and_simulation_example/: TODO
examples/data/: metatask_-1.json
examples/simulate_with_existing_data_example/: simulate_based_on_sklearn_data.py  sklearn_based_qdo_es_with_metadata_and_custom_behavior_function.py
examples/sklearn_examples/: all_phem_methods_for_sklearn_models.py  readnme_example.py  run_with_sklearn_models.py
src/phem/application_utils/: default_configurations.py  methods_factories.py  supported_metrics.py
src/phem/base_utils/: diversity_metrics.py  metrics.py  preprocessing.py
src/phem/base_utils/custom_metrics/: roc_auc.py
src/phem/framework/: abstract_ensemble.py  abstract_numerical_solvers.py  abstract_weighted_ensemble.py
src/phem/methods/baselines/: __init__.py  single_best.py
src/phem/methods/ensemble_selection/: __init__.py  greedy_ensemble_selection.py
src/phem/methods/ensemble_selection/qdo/: README.md  __init__.py  behavior_space.py  behavior_spaces.py  emitters.py  qdo_es.py
src/phem/methods/ensemble_selection/qdo/behavior_functions/: basic.py  implicit_diversity_metrics.py
src/phem/methods/ensemble_selection/qdo/custom_archives/: archive_utils.py  custom_sliding_boundaries_archive.py  quality_archive.py  utils.py
src/phem/methods/ensemble_weighting/: __init__.py  cmaes.py
